Fixes several issues with EssenceDate editor.
* The preview_text was missing an argument
* The jQuery-UI Datepicker select boxes where broken in Firefox.
* Passes `default_value` option to `alchemy_datepicker` helper

--- a/app/assets/stylesheets/alchemy/jquery-ui.scss
+++ b/app/assets/stylesheets/alchemy/jquery-ui.scss
@@ -1865,6 +1865,11 @@ button.ui-button::-moz-focus-inner {
   width: 17em;
   padding: $default-padding;
   display: none;
+
+  select {
+    height: 20px;
+    padding: 1px;
+  }
 }
 
 .ui-datepicker .ui-datepicker-header {
